--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,8 +1,15 @@
+/* Styling to all elements on the page */
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
+
+.a {
+   color: #ffffff;
+   text-decoration: none;
+  }
 
 body {
     background-color: #d9dcd6;
@@ -24,7 +31,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +39,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
